<resources>
    <string name="app_name">Musical Structure App</string>
    <string name="Now_Playing">Now Playing</string>
    <string name="Playlists">Songs</string>
    <string name="Recent_activity">Recent Activity</string>
    <string name="shuffle">Shuffle</string>
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="songs_textview">Songs</string>
    <string name="song_name_textview">Song name -----</string>
    <string name="artist_name_textview">Artist name</string>
    <string name="playback_time">0:00</string>
    <string name="song_thumbnail">songThumbnail</string>
    <string name="music_separator">__ __</string>
    <string name="dislike_btn">dislike_btn</string>
    <string name="next_playback">next_playback</string>
    <string name="play_playback">play_playback</string>
    <string name="pause_playback">pause_playback</string>
    <string name="prev_payback">prev_payback</string>
    <string name="likebutton">likeButton</string>
    <string name="background_image">background_image</string>
    <string name="overflow_button">overflow_button</string>
    <string name="playlist_icon">playlist_icon</string>
    <string name="black_play_button">black_play_button</string>
    <string name="home_imageicon">home_imageIcon</string>
    <string name="oveflow_image">oveflow_image</string>
</resources>
