<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NowPlaying">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5"
        android:elevation="4dp"
        android:orientation="horizontal"
        tools:targetApi="lollipop">

        <ImageView
            android:layout_width="@dimen/width_height_50"
            android:layout_height="@dimen/width_height_50"
            android:layout_margin="@dimen/padding_and_margin"
            android:background="#eeeeee"
            android:scaleType="centerCrop"
            android:src="@drawable/background_image"
            android:contentDescription="@string/song_thumbnail" />

        <TextView
            android:id="@+id/playback_songname"
            style="@style/wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="marquee"
            android:paddingStart="@dimen/padding_and_margin"
            android:singleLine="true"
            android:text="@string/song_name_textview"
            android:textSize="@dimen/text_size" />
        <TextView
            android:ellipsize="marquee"
            android:id="@+id/artists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_and_margin"
            android:text="@string/artist_name_textview"
            android:textSize="@dimen/text_size"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/playlis_menu"
            android:layout_width="@dimen/width_height_30"
            android:layout_height="@dimen/width_height_30"
            android:layout_gravity="center_vertical"
            android:src="@drawable/listview_music_icon"
            android:contentDescription="@string/playlist_icon" />

        <ImageView
            style="@style/wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/overflow"
            android:contentDescription="@string/overflow_button" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_image"
        android:contentDescription="@string/background_image" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:layout_above="@+id/playback"
        android:thumbTint="@android:color/holo_orange_dark"
        android:background="#f5f5f5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_and_margin"
        tools:targetApi="lollipop" />

    <RelativeLayout
        android:id="@+id/playback"
        android:background="#f5f5f5"
        android:padding="@dimen/padding_and_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_alignParentStart="true"
            android:orientation="horizontal"
           style="@style/wrap_content">
            <TextView
                android:text="@string/playback_time"
                style="@style/fab_style"/>

            <ImageView
                style="@style/dimen_20"
                android:src="@drawable/thumbs_up"
                android:contentDescription="@string/likebutton" />

        </LinearLayout>



        <ImageView
            android:layout_marginTop="@dimen/padding_and_margin"
            android:layout_toStartOf="@+id/playbtn"
            android:layout_width="@dimen/width_height_50"
            android:layout_height="@dimen/width_height_50"
            android:layout_centerHorizontal="true"
            android:src="@drawable/skip_previous"
            android:contentDescription="@string/prev_payback" />


        <ImageView
            android:id="@+id/playbtn"
            android:visibility="invisible"
           style="@style/dimens"
            android:src="@drawable/play_btn"
            android:contentDescription="@string/play_playback" />

        <ImageView
            android:layout_marginTop="@dimen/padding_and_margin"
            style="@style/dimens"
            android:id="@+id/pausebtn"
            android:src="@drawable/pause"
            android:contentDescription="@string/pause_playback" />




        <ImageView
            android:layout_marginTop="@dimen/padding_and_margin"
            android:layout_toEndOf="@+id/playbtn"
            android:layout_width="@dimen/width_height_50"
            android:layout_height="@dimen/width_height_50"
            android:layout_centerHorizontal="true"
            android:src="@drawable/skip_next"
            android:contentDescription="@string/next_playback" />


        <LinearLayout
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
           style="@style/wrap_content">

            <ImageView
                android:layout_width="@dimen/width_height_20"
                android:layout_height="@dimen/width_height_20"
                android:layout_marginTop="@dimen/margin1"
                android:src="@drawable/thumbs_down"
                android:contentDescription="@string/dislike_btn" />

            <TextView
               style="@style/wrap_content"
                android:text="@string/playback_time"/>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>